Fix validator: use isBlank for employeeName